[package]
name = "lasa"
version = "1.0.0"
edition = "2024"

[dependencies]
athena = { git = "https://github.com/xqhare/athena", features = ["process"] }
areia = { git = "https://github.com/xqhare/areia" }
hades = { git = "https://github.com/xqhare/hades" }
horae = { git = "https://github.com/xqhare/horae" }
nabu = { git = "https://github.com/xqhare/nabu" }
mawu = { git = "https://github.com/xqhare/mawu" }
